fix: update compact content styles for better alignment and spacing

--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -32,7 +32,8 @@
 /* Compact Content */
 .compact-content {
   spacing: 6px;
-  min-width: 100px;
+  min-width: 200px;
+  text-align: center;
 }
 
 .status-icon {
@@ -43,7 +44,7 @@
   color: rgba(255, 255, 255, 0.9);
   font-size: 14px;
   font-weight: bold;
-  /* margin-left: 4px; */
+  margin-left: 50px;
 }
 
 /* Expanded Content */
@@ -109,7 +110,8 @@
 }
 
 .control-button.play-pause {
-  background-color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  // background-color: rgba(255, 255, 255, 0.9);
 }
 
 .control-button.play-pause StIcon {
